# water-quality-template

./: .gitignore  README.md  pyproject.toml  spai.config.json  spai.config.yaml  spai.vars.json
apis/analytics/: main.py
scripts/downloader/: .env.example  main.py  requirements.txt
scripts/water-quality/: main.py  requirements.txt
uis/map/: config.py  main.py
uis/map/src/: app.html
uis/map/src/components/: Analytics.svelte
uis/map/src/components/analytics/: Timeline.svelte  WaterQuality.svelte
uis/map/src/components/branding/: Logo.svelte
uis/map/src/components/map/: LayersControl.svelte  Map.svelte  basemaps.js
uis/map/src/routes/: +layout.svelte  +page.server.js  +page.svelte
uis/map/static/: README.md
