[project]
name = "water-quality-template"
version = "0.1.0"
description = "Water Quality Template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bson>=0.5.10",
    "cachetools==6.1.0",
    "fastapi==0.116.1",
    "geojson>=3.2.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.3",
    "mercantile==1.2.1",
    "numpy==2.3.1",
    "odc-geo==0.4.7",
    "odc-stac>=0.4.0",
    "overpy>=0.7",
    "pandas==2.3.1",
    "pillow>=10.4.0",
    "pystac-client>=0.9.0",
    "python-dotenv==1.1.1",
    "rasterio<=1.3.10",
    "rioxarray>=0.18.2",
    "scikit-image>=0.25.2",
    "shapely==2.1.1",
    "spai==2025.10.9.dev0",
    "tqdm>=4.67.1",
    "uvicorn==0.35.0",
    "minio==7.1.15"
]
